--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7bc6e">  <td>21/06/29 14:42:11</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:Selenium.NewTest@7f552bd3]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1034568234</td>   <td></td> </tr>
-<tr bgcolor="a7bc6e">  <td>21/06/29 14:42:19</td>   <td>7910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f()[pri:1, instance:Selenium.NewTest@7f552bd3]">f</td> 
-  <td>main@1034568234</td>   <td></td> </tr>
-<tr bgcolor="a7bc6e">  <td>21/06/29 14:42:25</td>   <td>14440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.login()[pri:2, instance:Selenium.NewTest@7f552bd3]">login</td> 
-  <td>main@1034568234</td>   <td></td> </tr>
-<tr bgcolor="a7bc6e">  <td>21/06/29 14:42:26</td>   <td>14484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.openExpensesTab()[pri:3, instance:Selenium.NewTest@7f552bd3]">openExpensesTab</td> 
-  <td>main@1034568234</td>   <td></td> </tr>
-<tr bgcolor="a7bc6e">  <td>21/06/29 14:42:36</td>   <td>24833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.NewButton()[pri:4, instance:Selenium.NewTest@7f552bd3]">NewButton</td> 
-  <td>main@1034568234</td>   <td></td> </tr>
-<tr bgcolor="a7bc6e">  <td>21/06/29 14:42:36</td>   <td>24860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.SearchButton()[pri:5, instance:Selenium.NewTest@7f552bd3]">SearchButton</td> 
-  <td>main@1034568234</td>   <td></td> </tr>
-<tr bgcolor="a7bc6e">  <td>21/06/29 14:42:36</td>   <td>24878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.DeleteButton()[pri:6, instance:Selenium.NewTest@7f552bd3]">DeleteButton</td> 
-  <td>main@1034568234</td>   <td></td> </tr>
-<tr bgcolor="a7bc6e">  <td>21/06/29 14:42:36</td>   <td>24894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.signOut()[pri:7, instance:Selenium.NewTest@7f552bd3]">signOut</td> 
-  <td>main@1034568234</td>   <td></td> </tr>
-<tr bgcolor="a7bc6e">  <td>21/06/29 14:42:36</td>   <td>24908</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:Selenium.NewTest@7f552bd3]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1034568234</td>   <td></td> </tr>
+<tr bgcolor="9daf9d">  <td>21/06/29 17:11:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:Selenium.NewTest@47d90b9e]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@667821226</td>   <td></td> </tr>
+<tr bgcolor="9daf9d">  <td>21/06/29 17:12:02</td>   <td>8050</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f()[pri:1, instance:Selenium.NewTest@47d90b9e]">f</td> 
+  <td>main@667821226</td>   <td></td> </tr>
+<tr bgcolor="9daf9d">  <td>21/06/29 17:12:04</td>   <td>9831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.login()[pri:2, instance:Selenium.NewTest@47d90b9e]">login</td> 
+  <td>main@667821226</td>   <td></td> </tr>
+<tr bgcolor="9daf9d">  <td>21/06/29 17:12:05</td>   <td>10670</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.openExpensesTab()[pri:3, instance:Selenium.NewTest@47d90b9e]">openExpensesTab</td> 
+  <td>main@667821226</td>   <td></td> </tr>
+<tr bgcolor="9daf9d">  <td>21/06/29 17:12:07</td>   <td>13189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.NewButton()[pri:4, instance:Selenium.NewTest@47d90b9e]">NewButton</td> 
+  <td>main@667821226</td>   <td></td> </tr>
+<tr bgcolor="9daf9d">  <td>21/06/29 17:12:08</td>   <td>14029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.SearchButton()[pri:5, instance:Selenium.NewTest@47d90b9e]">SearchButton</td> 
+  <td>main@667821226</td>   <td></td> </tr>
+<tr bgcolor="9daf9d">  <td>21/06/29 17:12:09</td>   <td>15000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.DeleteButton()[pri:6, instance:Selenium.NewTest@47d90b9e]">DeleteButton</td> 
+  <td>main@667821226</td>   <td></td> </tr>
+<tr bgcolor="9daf9d">  <td>21/06/29 17:12:09</td>   <td>15248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.signOut()[pri:7, instance:Selenium.NewTest@47d90b9e]">signOut</td> 
+  <td>main@667821226</td>   <td></td> </tr>
+<tr bgcolor="9daf9d">  <td>21/06/29 17:12:10</td>   <td>16126</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:Selenium.NewTest@47d90b9e]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@667821226</td>   <td></td> </tr>
 </table>
